Sonar Cube Issues Fixed.